--- a/basics-assignment-1-start/src/app/app.component.html
+++ b/basics-assignment-1-start/src/app/app.component.html
@@ -1,3 +1,5 @@
+
+
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
@@ -13,3 +15,8 @@
   </div>
 </div>
 
+<div>
+  <app-success-alert-component></app-success-alert-component>
+
+  <app-warning-alert-component></app-warning-alert-component>
+</div>
