assignment 2 , data binding

--- a/basics-assignment-1-start/src/app/app.component.html
+++ b/basics-assignment-1-start/src/app/app.component.html
@@ -7,10 +7,14 @@
     <div class="alert">
       {{message}}
     </div>
+<!-- 
+    <input type="text" (input)="onTextChangeEvent($event)" /> -->
 
-    <input type="text" (input)="onTextChangeEvent($event)" />
+    <input type="text" [(ngModel)]="serverName" />
     {{serverName}}
     <app-success-alert-component></app-success-alert-component>  
     <app-warning-alert-component></app-warning-alert-component>
   </div> 
+
+  <app-assignment2></app-assignment2>
 </div>
