--- a/RecipesProject/src/app/app.component.html
+++ b/RecipesProject/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      working
+      <app-recipes></app-recipes>
+      <app-shopping-list></app-shopping-list>
     </div>
   </div>
 
