--- a/RecipesProject/src/app/app.component.html
+++ b/RecipesProject/src/app/app.component.html
@@ -1,9 +1,10 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <app-recipes></app-recipes>
-      <app-shopping-list></app-shopping-list>
+      <app-recipes></app-recipes>      
     </div>
+    <div class="col-xs-12">
+      <app-shopping-list></app-shopping-list>
+    </div>    
   </div>
-
 </div>
