--- a/RecipesProject/src/app/shopping-list/shopping-list.component.html
+++ b/RecipesProject/src/app/shopping-list/shopping-list.component.html
@@ -1,1 +1,8 @@
-<p>shopping-list works!</p>
+<div class="row">
+    <div class="col-md-10">
+        <app-shopping-list-edit></app-shopping-list-edit>
+        <hr>
+    <p>The list</p>
+    </div>    
+    
+</div>
