course project basics - setting up components

--- a/RecipesProject/src/app/recipes/recipe-details/recipe-details.component.html
+++ b/RecipesProject/src/app/recipes/recipe-details/recipe-details.component.html
@@ -1,1 +1,32 @@
-<p>recipe-details works!</p>
+<div class="row">
+    <div class="col-xs-12">
+        <img src="" alt="" class="img-responsive">
+    </div>    
+</div>
+<div class="row">
+      <div class="col-xsw-12"  >
+          <h1>Recipe name</h1>
+      </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <div class="btn-group">
+            <button type="button" class="Manage recipe"></button>
+            <ul class="dropdown-menu">
+                <li><a>To shopping list</a></li>
+                <li><a>Edit recipe</a></li>
+                <li><a>Delete Recipe</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xsw-12"  >
+        <h4>Recipe Description</h4>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xsw-12">
+        <h4>Ingredients</h4>
+    </div>
+</div>
