--- a/RecipesProject/src/app/app.component.html
+++ b/RecipesProject/src/app/app.component.html
@@ -1,5 +1,8 @@
 <div class="container">
   <div class="row">
+    <div class="col-md-12">
+      <app-header></app-header>
+    </div>
     <div class="col-xs-12">
       <app-recipes></app-recipes>      
     </div>
