--- a/RecipesProject/src/app/shopping-list/shopping-list.component.html
+++ b/RecipesProject/src/app/shopping-list/shopping-list.component.html
@@ -2,7 +2,11 @@
     <div class="col-md-10">
         <app-shopping-list-edit></app-shopping-list-edit>
         <hr>
-    <p>The list</p>
+    <ul class="list-group" *ngFor="let ingredient of ingredients">
+        <a class="list-group-item" style="cursor: pointer;">
+            {{ingredient.name}} ({{ingredient.amount}})
+        </a>
+    </ul>>
     </div>    
     
 </div>
