--- a/basics-assignment-1-start/src/app/app.component.html
+++ b/basics-assignment-1-start/src/app/app.component.html
@@ -7,14 +7,17 @@
       <p class="alert alert-warning" [ngStyle]="{'background-color':'blue'}">{{message}}</p>
     </ng-template>
     <div class="row">
-      <button class="btn btn-primary" [disabled]="!allowNew" (click)="onAddNewClick($event)">Add New!</button>
+      <button class="btn btn-primary" [disabled]="!allowNew" (click)="onAddNewClick(newServerName)">Add New!</button>
     </div>
 
     <!-- 
     <input type="text" (input)="onTextChangeEvent($event)" /> -->
-    <input type="text" [(ngModel)]="serverName" />
+    <input type="text" [(ngModel)]="serverName" #newServerName/>
     {{serverName}}
-    <app-success-alert-component></app-success-alert-component>
+
+    <app-success-alert-component [message]="successMessage" >
+
+    </app-success-alert-component>
     <app-warning-alert-component></app-warning-alert-component>
   </div>
 
