--- a/basics-assignment-1-start/src/app/assignment2/assignment2.component.html
+++ b/basics-assignment-1-start/src/app/assignment2/assignment2.component.html
@@ -1,3 +1,12 @@
+
+
+
+<div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">Assignment 2</h3>
+    </div>
+    <div class="panel-body">
+    
 <h3>Assignment 2</h3>
 <div class="panel">
     <input type="text" [(ngModel)]="username" />
@@ -6,3 +15,8 @@
     <br />
     <button class="btn btn=-primary" [disabled]="!IsEnabled()" (click)="username=''"> Reset</button>
 </div>
+
+      
+    </div>
+  </div>
+
