--- a/basics-assignment-1-start/src/app/assignment3/assignment3.component.html
+++ b/basics-assignment-1-start/src/app/assignment3/assignment3.component.html
@@ -1,15 +1,24 @@
-<h3>Assignment 3</h3>
 
-<button class="btn btn-primary" (click)="onToggleClick()">
-  Display details
-</button>
 
-<div *ngIf="IsDetailsDisplayed">
-  Secret Password = Tuna
-</div>
 
-<div *ngFor="let item of log; index as i">
-
-  <p [ngStyle]="{'background-color' : i > 4 ? 'lightblue' : '' }" [ngClass]="{'index5' : i > 4}">
-    {{i}} {{item}}</p>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Assignment 3</h3>
+  </div>
+  <div class="panel-body">
+    <button class="btn btn-primary" (click)="onToggleClick()">
+      Display details
+    </button>
+    
+    <div *ngIf="IsDetailsDisplayed">
+      Secret Password = Tuna
+    </div>
+    
+    <div *ngFor="let item of log; index as i">
+    
+      <p [ngStyle]="{'background-color' : i > 4 ? 'lightblue' : '' }" [ngClass]="{'index5' : i > 4}">
+        {{i}} {{item}}</p>
+    </div>
+    
+  </div>
 </div>
