--- a/basics-assignment-1-start/src/app/assignment4/game-control/game-control.component.html
+++ b/basics-assignment-1-start/src/app/assignment4/game-control/game-control.component.html
@@ -3,13 +3,12 @@
 </div>
 <div class="row">
     <div class="col-md-6">
-        <button class="btn btn-success">
+        <button class="btn btn-success" (click)="onStartClick()">
             Start
         </button>
-    </div>
-    <div class="col-md-6">
-        <button class="btn btn-danger">
+        <button class="btn btn-danger" (click)="onStopClick()">
             Stop
         </button>
     </div>
+    
 </div>
