--- a/RecipesProject/src/app/app.component.html
+++ b/RecipesProject/src/app/app.component.html
@@ -1,12 +1,12 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <app-header></app-header>
+      <app-header (displaySection)="onDisplaySectionSelected($event)"></app-header>
     </div>
-    <div class="col-xs-12">
+    <div class="col-xs-12" *ngIf="showRecipesMenu === true">
       <app-recipes></app-recipes>      
     </div>
-    <div class="col-xs-12">
+    <div class="col-xs-12" *ngIf="showShoppingList === true">
       <app-shopping-list></app-shopping-list>
     </div>    
   </div>
