--- a/RecipesProject/src/app/header/header.component.html
+++ b/RecipesProject/src/app/header/header.component.html
@@ -8,8 +8,8 @@
           </div>
           <div class="navbar-collapse" [class.collapse]="collapsed" (window:resize)="collapsed = true">
             <ul class="nav navbar-nav">
-                <li><a href="#">Recipes</a></li>
-                <li><a href="#">Shopping list</a></li>
+                <li><a href="#" (click)="onDisplayRecipesClick()">Recipes</a></li>
+                <li><a href="#" (click)="onDisplayShoppingListClick()">Shopping list</a></li>
             </ul>
           </div>
 
