--- a/RecipesProject/src/app/recipes/recipe-details/recipe-details.component.html
+++ b/RecipesProject/src/app/recipes/recipe-details/recipe-details.component.html
@@ -1,11 +1,11 @@
 <div class="row">
     <div class="col-xs-12">
-        <img src="" alt="" class="img-responsive">
+    <img style="{max-height: 300px;}" [src]="recipe.imagePath" [alt]="recipe.name" class="img-responsive">
     </div>    
 </div>
 <div class="row">
-      <div class="col-xsw-12"  >
-          <h1>Recipe name</h1>
+      <div class="col-xs-12"  >
+          <h1>{{recipe.name}}</h1>
       </div>
 </div>
 <div class="row">
@@ -22,7 +22,7 @@
 </div>
 <div class="row">
     <div class="col-xsw-12"  >
-        <h4>Recipe Description</h4>
+        <h4>{{recipe.desc}}</h4>
     </div>
 </div>
 <div class="row">
