--- a/RecipesProject/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/RecipesProject/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,1 +1,11 @@
-<p>recipe-item works!</p>
+<div class="row">
+    <div class="pull-left">
+        <h4 class="list-group-item-heading">
+            {{recipeItem.name}}
+        </h4>
+        <p class="list-group-item-text">{{recipeItem.description}}</p>
+    </div>
+    <span class="pull-right">
+        <img [src]="recipeItem.imagePath" alt="{{recipeItem.name}}" class="img-responsive" style="max-height:50px;" />
+    </span>
+</div>
