--- a/RecipesProject/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/RecipesProject/src/app/recipes/recipe-list/recipe-list.component.html
@@ -6,17 +6,10 @@
 <div class="row">
     <div class="col-xs-12">
         <a href="#" class="list-group-item clearfix" *ngFor="let recipeItem of recipes">
-            <div class="pull-left">
-                <h4 class="list-group-item-heading">
-                    {{recipeItem.name}}
-                </h4>
-                <p class="list-group-item-text">{{recipeItem.description}}</p>
-            </div>
-            <span class="pull-right">
-                <img [src]="recipeItem.imagePath" alt="{{recipeItem.name}}" class="img-responsive" style="max-height:50px;" />
-            </span>
+           <app-recipe-item  [recipeItem]="recipeItem" (click)="onRecipeItemClick(recipeItem)">
+
+           </app-recipe-item>
         </a>
-        <!-- <app-recipe-item></app-recipe-item> -->
     </div>
 </div>
 
