--- a/RecipesProject/src/app/recipes/recipes.component.html
+++ b/RecipesProject/src/app/recipes/recipes.component.html
@@ -1,8 +1,8 @@
 <div class="row">
     <div class="col-md-5">
-        <app-recipe-list></app-recipe-list>
+        <app-recipe-list (onRecipeSelected)="selectedRecipe = $event"></app-recipe-list>
     </div>
     <div class="col-md-7">
-        <app-recipe-details></app-recipe-details>
+        <app-recipe-details [recipe]="selectedRecipe"></app-recipe-details>
     </div>
 </div>
