--- a/RecipesProject/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
+++ b/RecipesProject/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
@@ -4,16 +4,16 @@
             <div class="row">
                 <div class="col-sm-5">
                     <label form="name"></label>
-                    <input type="text" id="name" class="form-control">
+                    <input #nameInput type="text" id="name" class="form-control">
                 </div>
                 <div class="col-sm-2">
                     <label form="amount"></label>
-                    <input type="text" id="amount" class="form-control">
+                    <input #amountInput type="text" id="amount" class="form-control">
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-12">
-                    <button class="btn btn-success" type="submit">Add</button>
+                    <button class="btn btn-success" type="button" (click)="onAddClick()">Add</button>
                     <button class="btn btn-danger" type="button">Delete</button>
                     <button class="btn btn-primary" type="button">Clear</button>
                 </div>
