--- a/RecipesProject/src/app/recipes/recipe-details/recipe-details.component.html
+++ b/RecipesProject/src/app/recipes/recipe-details/recipe-details.component.html
@@ -10,8 +10,8 @@
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <div class="btn-group">
-            <button type="button" class="Manage recipe"></button>
+        <div class="btn-group" appDropdown>
+            <button type="button" class="Manage recipe">Manage Recipes <span class="caret"></span></button>
             <ul class="dropdown-menu">
                 <li><a>To shopping list</a></li>
                 <li><a>Edit recipe</a></li>
