--- a/basics-assignment-1-start/src/app/assignment5/assignment5.component.html
+++ b/basics-assignment-1-start/src/app/assignment5/assignment5.component.html
@@ -1,33 +1,9 @@
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h3 class="panel-title">Assignment 5</h3>
+    <h3 class="panel-title">Assignment 5 {{counter}} </h3>
   </div>
   <div class="panel-body">
-    <div class="container">
-      <p>Active Users</p>
-      <ul class="list-group">
-        <li class="list-group-item" *ngFor="let user of activeUsers">
-          {{ user }}
-          <!-- <button class="btn btn-primary" ><Set InActive/button>  -->
-          <span
-            class="badge badge-primary badge-pill"
-            (click)="setStatusToInActive(user)"
-            >InActive</span
-          >
-        </li>
-      </ul>
-      <p>In-Active Users</p>
-      <ul class="list-group">
-        <li class="list-group-item" *ngFor="let user of inActiveUsers">
-          {{ user }}
-          <span
-            class="badge badge-primary badge-pill"
-            (click)="setStatusToActive(user)"
-            >Active</span
-          >
-          <!-- <button class="btn btn-primary" (click)="onSetInActiveClick(user)">Set Active</button>  -->
-        </li>
-      </ul>
-    </div>
+    <app-active-users></app-active-users>
+    <app-inactive-users></app-inactive-users>
   </div>
 </div>
