fix issue with index

--- a/basics-assignment-1-start/src/app/assignment5/active-users/active-users.component.html
+++ b/basics-assignment-1-start/src/app/assignment5/active-users/active-users.component.html
@@ -5,7 +5,7 @@
         {{ user.name }}
         <span
           class="badge badge-primary badge-pill"
-          (click)="toggleStatus(i)"
+          (click)="toggleStatus(user.name)"
           >InActive</span
         >
       </li>
