--- a/basics-assignment-1-start/src/app/assignment5/inactive-users/inactive-users.component.html
+++ b/basics-assignment-1-start/src/app/assignment5/inactive-users/inactive-users.component.html
@@ -4,7 +4,7 @@
     {{ user.name }}
     <span
       class="badge badge-primary badge-pill"
-      (click)="toggleStatus(i)"
+      (click)="toggleStatus(user.name)"
       >Active</span
     >
     <!-- <button class="btn btn-primary" (click)="onSetInActiveClick(user)">Set Active</button>  -->
