--- a/basics-assignment-1-start/src/app/assignment5/active-users/active-users.component.html
+++ b/basics-assignment-1-start/src/app/assignment5/active-users/active-users.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+
     <p>Active Users</p>
     <ul class="list-group">
       <li class="list-group-item" *ngFor="let user of getUsers(); let i = index">
@@ -6,8 +6,8 @@
         <span
           class="badge badge-primary badge-pill"
           (click)="toggleStatus(user.name)"
-          >InActive</span
+          >Set to In-Active</span
         >
       </li>
     </ul>   
-  </div>
+ 
