--- a/basics-assignment-1-start/src/app/assignment5/inactive-users/inactive-users.component.html
+++ b/basics-assignment-1-start/src/app/assignment5/inactive-users/inactive-users.component.html
@@ -5,8 +5,7 @@
     <span
       class="badge badge-primary badge-pill"
       (click)="toggleStatus(user.name)"
-      >Active</span
+      >Set to Active</span
     >
-    <!-- <button class="btn btn-primary" (click)="onSetInActiveClick(user)">Set Active</button>  -->
   </li>
 </ul>
