routing using routerLink Directive programaticaly loading routes relative vs absolute paths in routes accessing route params in the component using ActivateRoute service subscribe to route params change using observables destroy subscription on component  onDestroy event

--- a/routing-start/src/app/servers/servers.component.html
+++ b/routing-start/src/app/servers/servers.component.html
@@ -15,4 +15,5 @@
     <app-server></app-server>
   </div>
 </div>
+<button class="btn btn-primary" (click)="onLoadServers()" >Load Server page</button>
 
