Handle route changes before saving current page changes using 'DeactivateGuard' fake auth setup pass static data to route

--- a/routing-start/src/app/home/home.component.html
+++ b/routing-start/src/app/home/home.component.html
@@ -2,4 +2,6 @@
 <p>Manage your Servers and Users.</p>
 
 <button class="btn btn-primary" (click)="onLoadServers(1)" >Load Server page</button>
-
+<hr>
+<button class="btn btn-default" (click)="onLogin()">Log in</button> <hr>
+<button class="btn btn-warning" (click)="onLogout()">Log out</button>
