--- a/routing-start/src/app/app.component.html
+++ b/routing-start/src/app/app.component.html
@@ -11,6 +11,7 @@
         <li role="presentation" routerLinkActive="active">
           <a routerLink="/users">Users</a>
         </li>
+        <li class="pull-right">Login Status</li>
       </ul>
     </div>
   </div>
