--- a/RecipesProject/src/app/shopping-list/shopping-list.component.html
+++ b/RecipesProject/src/app/shopping-list/shopping-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-10">
-        <app-shopping-list-edit (addClickedEvent)="addIngredientClicked($event)"></app-shopping-list-edit>
+        <app-shopping-list-edit ></app-shopping-list-edit>
         <hr>
     <ul class="list-group" *ngFor="let ingredient of ingredients">
         <a class="list-group-item" style="cursor: pointer;">
