issue with incorrect component in routing

--- a/RecipesProject/src/app/recipes/recipe-details/recipe-details.component.html
+++ b/RecipesProject/src/app/recipes/recipe-details/recipe-details.component.html
@@ -13,9 +13,9 @@
         <div class="btn-group" appDropdown>
             <button type="button" class="Manage recipe">Manage Recipes <span class="caret"></span></button>
             <ul class="dropdown-menu">
-                <li><a>To shopping list</a></li>
-                <li><a>Edit recipe</a></li>
-                <li><a>Delete Recipe</a></li>
+                <li><a style="cursor: pointer;" routerLink="/shoppinglist">To shopping list</a></li>
+                <li><a style="cursor: pointer;">Edit recipe</a></li>
+                <li><a style="cursor: pointer;">Delete Recipe</a></li>
             </ul>
         </div>
     </div>
