--- a/RecipesProject/src/app/app.component.html
+++ b/RecipesProject/src/app/app.component.html
@@ -14,7 +14,8 @@
     </div> -->
   </div>
 </div>
-<div>
+
+<!-- <div>
   <p appBasicHighlight>test</p>
   <button class="btn btn-primary" (click)="onToggleClick()">
     Toggle condition
@@ -22,4 +23,4 @@
   <div *appUnless="display">
     structural directive demo
   </div>
-</div>
+</div> -->
