--- a/RecipesProject/src/app/recipes/recipe-details/recipe-details.component.html
+++ b/RecipesProject/src/app/recipes/recipe-details/recipe-details.component.html
@@ -14,7 +14,7 @@
             <button type="button" class="Manage recipe">Manage Recipes <span class="caret"></span></button>
             <ul class="dropdown-menu">
                 <li><a style="cursor: pointer;" routerLink="/shoppinglist">To shopping list</a></li>
-                <li><a style="cursor: pointer;">Edit recipe</a></li>
+                <li><a style="cursor: pointer;" [routerLink]="['edit']">Edit recipe</a></li>
                 <li><a style="cursor: pointer;">Delete Recipe</a></li>
             </ul>
         </div>
