--- a/RecipesProject/src/app/recipes/recipes.component.html
+++ b/RecipesProject/src/app/recipes/recipes.component.html
@@ -3,6 +3,8 @@
         <app-recipe-list></app-recipe-list>
     </div>
     <div class="col-md-7">
-        <app-recipe-details [recipe]="selectedRecipe"></app-recipe-details>
+        <!-- <app-recipe-details [recipe]="selectedRecipe"></app-recipe-details> -->
+        
+        <router-outlet></router-outlet>
     </div>
 </div>
