--- a/RecipesProject/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/RecipesProject/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,15 +1,14 @@
 <div class="row">
-    <div class="col-xs-12">
-        <button class="btn btn-success">Add recipe</button>
-    </div>
+  <div class="col-xs-12">
+    <button class="btn btn-success" routerLink="new" >Add recipe</button>
+  </div>
 </div>
 <div class="row">
-    <div class="col-xs-12">
-        <a  style="cursor: pointer;"  class="list-group-item clearfix" *ngFor="let recipeItem of recipes">
-           <app-recipe-item  [recipeItem]="recipeItem" (click)="onRecipeItemClick(recipeItem)">
-
-           </app-recipe-item>
-        </a>
-    </div>
+  <div class="col-xs-12">
+    <app-recipe-item
+      *ngFor="let recipeItem of recipes; let i = index"
+      [recipeItem]="recipeItem" [index]="i"      
+    >
+    </app-recipe-item>
+  </div>
 </div>
-
