--- a/forms-td-start/src/app/app.component.html
+++ b/forms-td-start/src/app/app.component.html
@@ -2,24 +2,30 @@
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <form (ngSubmit)="onSubmit()" #f="ngForm">
-        <div id="user-data">
+        <div id="user-data" ngModelGroup="userData" #userData="ngModelGroup">
           <div class="form-group">
             <label for="username">Username</label>
             <input type="text" id="username" class="form-control" ngModel name="username" required>
           </div>
-          <button class="btn btn-default" type="button">Suggest an Username</button>
+          <button class="btn btn-default" type="button" (click)="suggestUserName()">Suggest an Username</button>
           <div class="form-group">
             <label for="email">Mail</label>
             <input type="email" id="email" class="form-control" ngModel name="email" required email #email="ngModel">
             <span class="help-cblock" *ngIf="!email.valid && email.touched">Please enter a valid email</span>
           </div>
         </div>
+        <p *ngIf="!userData.valid && userData.touched">User data is invalid</p>
         <div class="form-group">
           <label for="secret">Secret Questions</label>
           <select id="secret" class="form-control" ngModel name="secret" [ngModel]="defaultQuestion">
             <option value="pet">Your first Pet?</option>
             <option value="teacher">Your first teacher?</option>
           </select>
+        </div>
+        <div class="radio" *ngFor="let gender of genders">
+          <label>
+            <input type="radio" name="gender" ngModel [value]="gender" required />{{gender}}
+          </label>
         </div>
         <div class="form-group">
           <textarea name="questionanswer" class="form-control" rows="3" [(ngModel)]="answer"></textarea>
@@ -28,6 +34,17 @@
         <p *ngIf="!f.valid"></p>
         <button class="btn btn-primary" [disabled]="!f.valid" type="submit">Submit</button>
       </form>
+      <hr>
+      <div class="row">
+        <div class="col-xs-12">
+          <h3>Your Data</h3>
+          <p>Username: {{user.username}}</p>
+          <p>email: {{user.email}}</p>
+          <p>secret question: {{user.secretquestion}}</p>
+          <p>answer: {{user.answer}}</p>
+          <p>gender: {{user.gender}}</p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
