reactive form starter template assignment 6 starter template

--- a/basics-assignment-1-start/src/app/assignment2/assignment2.component.html
+++ b/basics-assignment-1-start/src/app/assignment2/assignment2.component.html
@@ -3,7 +3,7 @@
 
 <div class="panel panel-default">
     <div class="panel-heading">
-      <h3 class="panel-title">Assignment 2</h3>
+      <h3 class="panel-title">Assignment 2 - Data binding</h3>
     </div>
     <div class="panel-body">
     
