--- a/basics-assignment-1-start/src/app/assignment4/assignment4.component.html
+++ b/basics-assignment-1-start/src/app/assignment4/assignment4.component.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
     <div class="panel-heading">
-      <h3 class="panel-title">Assignment 4</h3>
+      <h3 class="panel-title">Assignment 4 - Components and Data binding</h3>
     </div>
     <div class="panel-body">
       <app-game-control (startClicked)="startClicked($event)" (stopClicked)="stopClicked($event)"></app-game-control>
