--- a/basics-assignment-1-start/src/app/assignment1/assignment1.component.html
+++ b/basics-assignment-1-start/src/app/assignment1/assignment1.component.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h3 class="panel-title">Assignment 1</h3>
+    <h3 class="panel-title">Assignment 1 - Components</h3>
   </div>
   <div class="panel-body">
   
