--- a/basics-assignment-1-start/src/app/assignment3/assignment3.component.html
+++ b/basics-assignment-1-start/src/app/assignment3/assignment3.component.html
@@ -3,7 +3,7 @@
 
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h3 class="panel-title">Assignment 3</h3>
+    <h3 class="panel-title">Assignment 3-  Directives</h3>
   </div>
   <div class="panel-body">
     <button class="btn btn-primary" (click)="onToggleClick()">
