--- a/basics-assignment-1-start/src/app/assignment5/assignment5.component.html
+++ b/basics-assignment-1-start/src/app/assignment5/assignment5.component.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h3 class="panel-title">Assignment 5 {{counter}} </h3>
+    <h3 class="panel-title">Services - Assignment 5 {{counter}} </h3>
   </div>
   <div class="panel-body">
     <app-active-users></app-active-users>
