--- a/forms-reactive-start/src/app/app.component.html
+++ b/forms-reactive-start/src/app/app.component.html
@@ -1,29 +1,39 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-      <form>
+      <form [formGroup]="signupForm"> 
+        <div formGroupName="userData">
         <div class="form-group">
           <label for="username">Username</label>
           <input
             type="text"
-            id="username"
+            id="username" formControlName="username"
             class="form-control">
+            <span class="help-block" *ngIf="!signupForm.get('userData.username').valid && signupForm.get('userData.username').touched">Please enter a valid username</span>
         </div>
         <div class="form-group">
           <label for="email">email</label>
           <input
-            type="text"
-            id="email"
+            type="text" 
+            id="email" formControlName="email"
             class="form-control">
         </div>
+      </div>
         <div class="radio" *ngFor="let gender of genders">
           <label>
             <input
-              type="radio"
+              type="radio" formControlName="gender"
               [value]="gender">{{ gender }}
           </label>
         </div>
-        <button class="btn btn-primary" type="submit">Submit</button>
+        <div formArrayName="hobbies">
+          <h4>Hobbies</h4>
+          <button class="btn btn-default" (click)="onAddHobby()">Add Hobby</button>
+          <div class="form-control" *ngFor="let hobbyControl of controls; let i = index">
+            <input type="text" class="form-control" [formControlName]="i">
+          </div>
+        </div>
+        <button class="btn btn-primary" type="submit" (click)="onSubmit()">Submit</button>
       </form>
     </div>
   </div>
